dsp-cli/tests/snapshots/resource_type_list_snapshots__resource_type_list_builtins_csv_stderr.snap
---
source: tests/resource_type_list_snapshots.rs
expression: buf_to_string(&err_buf)
---
[anonymous on api.dasch.swiss]
