dsp-cli/tests/snapshots/resource_type_list_snapshots__resource_type_list_builtins_prose.snap
---
source: tests/resource_type_list_snapshots.rs
expression: out
---
resource-types in beol on api.dasch.swiss (6), incl. built-ins:

  Archive       Archive
  AudioSegment  Audio Annotation  (built-in)
  letter        Letter
  LinkObj       Link Object       (built-in)
  Region        Region            (built-in)
  VideoSegment  Video Annotation  (built-in)

[anonymous on api.dasch.swiss]
