dsp-cli/tests/snapshots/resource_type_list_snapshots__resource_type_list_builtins_tsv_stdout.snap
---
source: tests/resource_type_list_snapshots.rs
expression: stdout
---
name	iri	label	is_builtin
Archive	http://api.dasch.swiss/ontology/0801/beol/v2#Archive	Archive	false
AudioSegment	http://api.knora.org/ontology/knora-api/v2#AudioSegment	Audio Annotation	true
letter	http://api.dasch.swiss/ontology/0801/beol/v2#letter	Letter	false
LinkObj	http://api.knora.org/ontology/knora-api/v2#LinkObj	Link Object	true
Region	http://api.knora.org/ontology/knora-api/v2#Region	Region	true
VideoSegment	http://api.knora.org/ontology/knora-api/v2#VideoSegment	Video Annotation	true
