dsp-cli/tests/snapshots/resource_type_list_snapshots__resource_type_list_json_empty.snap
---
source: tests/resource_type_list_snapshots.rs
expression: out
---
{"_meta":{"server":"api.dasch.swiss","auth":"anonymous","exit_code":0},"data":[]}
