dsp-cli/tests/snapshots/resource_type_list_snapshots__resource_type_list_json_not_found.snap
---
source: tests/resource_type_list_snapshots.rs
expression: out
---
{"_meta":{"server":"api.dasch.swiss","auth":"anonymous","exit_code":1},"error":{"kind":"not_found","message":"not found: data-model 'beol' not found on api.dasch.swiss. Run `dsp vre data-model list --server api.dasch.swiss --project 0801` to see available data-models."}}
