dsp-cli/tests/snapshots/resource_type_list_snapshots__resource_type_list_lines_stdout.snap
---
source: tests/resource_type_list_snapshots.rs
expression: buf_to_string(&out_buf)
---
Archive	http://api.dasch.swiss/ontology/0801/beol/v2#Archive
letter	http://api.dasch.swiss/ontology/0801/beol/v2#letter
noLabelType	http://api.dasch.swiss/ontology/0801/beol/v2#noLabelType
